--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,7 @@ jobs:
         node-version: '16'
     - name: npm install
       run: |
-        ls
-        cd ./recipestash/client
+        cd ./client
         npm install
         npm build
         cd ../
