--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       run: |
         cd ./client
         npm install
-        npm build
+        npm run build
         cd ../
     - run: |
         git fetch --prune --unshallow
