--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,5 @@ Jinja2==3.1.2
 MarkupSafe==2.1.1
 six==1.16.0
 Werkzeug==2.2.2
-marshmallow-sqlalchemy
-flask_sqlalchemy
+flask-marshmallow==0.14.0
+Flask-SQLAlchemy==2.5.1
