--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,9 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 marshmallow==3.18.0
+marshmallow-sqlalchemy==0.28.1
 packaging==21.3
+psycopg2==2.9.3
 pyparsing==3.0.9
 PySocks==1.7.1
 requests==2.28.1
