--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
       run: |
         cd ./client
         npm install
+        npm install react-bootstrap
         npm run build
         cd ../
     - run: |
